[metadata]
name = mbarq
version = 1.0.1
author = Anna Sintsova
author_email = ansintsova@ethz.ch
description = Bioinformatic toolkit for barcode mapping and counting
long_description = file: README.md
keywords = mbarq
license = GPL-3.0

[options]
packages = find:

[options.entry_points]
console_scripts = 
    mbarq = mbarq.cli:main 